[project]
name = "oodaa"
version = "0.1.0"
description = "Self-Improvement Framework for Supply Chain Agents"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Aleks Sidorecs" }]
keywords = ["agents", "ooda", "oodaa", "supply-chain", "reinforcement", "self-improvement"]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["oodaa"]

[tool.pytest.ini_options]
testpaths = ["tests"]
